# internal/controller/account/login_controller.go
@@ -15,6 +15,54 @@ var Login = new(cUserLogin)
 
 type cUserLogin struct{}
 
+// UpdatePasswordRegister
+// @Summary      UpdatePasswordRegister
+// @Description  UpdatePasswordRegister
+// @Tags         accounts management
+// @Accept       json
+// @Produce      json
+// @Param        payload body model.UpdatePasswordRegisterInput true "payload"
+// @Success      200  {object}  response.ResponseData
+// @Failure      500  {object}  response.ErrorResponseData
+// @Router       /user/update_pass_register [post]
+func (c *cUserLogin) UpdatePasswordRegister(ctx *gin.Context) {
+	var params model.UpdatePasswordRegisterInput
+	if err := ctx.ShouldBindJSON(&params); err != nil {
+		response.ErrorResponse(ctx, response.ErrCodeParamInvalid, err.Error())
+		return
+	}
+	result, err := service.UserLogin().UpdatePasswordRegister(ctx, params.UserToken, params.UserPassword)
+	if err != nil {
+		response.ErrorResponse(ctx, response.ErrCodeParamInvalid, err.Error())
+		return
+	}
+	response.SuccessResponse(ctx, response.ErrCodeSuccess, result)
+}
+
+// Verify OTP Login By User
+// @Summary      Verify OTP Login By User
+// @Description  Verify OTP Login By User
+// @Tags         accounts management
+// @Accept       json
+// @Produce      json
+// @Param        payload body model.VerifyInput true "payload"
+// @Success      200  {object}  response.ResponseData
+// @Failure      500  {object}  response.ErrorResponseData
+// @Router       /user/verify_account [post]
+func (c *cUserLogin) VerifyOTP(ctx *gin.Context) {
+	var params model.VerifyInput
+	if err := ctx.ShouldBindJSON(&params); err != nil {
+		response.ErrorResponse(ctx, response.ErrCodeParamInvalid, err.Error())
+		return
+	}
+	result, err := service.UserLogin().VerifyOTP(ctx, &params)
+	if err != nil {
+		response.ErrorResponse(ctx, response.ErrInvalidOTP, err.Error())
+		return
+	}
+	response.SuccessResponse(ctx, response.ErrCodeSuccess, result)
+}
+
 func (c *cUserLogin) Login(ctx *gin.Context) {
 	err := service.UserLogin().Login(ctx)
 	if err != nil {
