# internal/routers/user/user.router.go
@@ -6,7 +6,8 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
-type UserRouter struct{}
+type UserRouter struct {
+}
 
 func (pr *UserRouter) InitUserRouter(Router *gin.RouterGroup) {
 	// public router
@@ -14,6 +15,8 @@ func (pr *UserRouter) InitUserRouter(Router *gin.RouterGroup) {
 	userRouterPublic := Router.Group("/user")
 	{
 		userRouterPublic.POST("/register", account.Login.Register)
+		userRouterPublic.POST("/verify_account", account.Login.VerifyOTP)
+		userRouterPublic.POST("/update_pass_register", account.Login.UpdatePasswordRegister)
 		userRouterPublic.POST("/login", account.Login.Login)
 	}
 	// private router
